# homeassistant-nefit-easy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements_test.txt  test-results.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  validate.yml
assets/: build_brands.py
custom_components/nefit_easy/: __init__.py  binary_sensor.py  boiler_codes.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  gas_statistics.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/nefit_easy/api/: __init__.py  client.py  crypto.py  errors.py  xmpp.py
custom_components/nefit_easy/translations/: en.json
scripts/: ci  nefit_probe.py  probe
tests/: conftest.py  test_binary_sensor.py  test_boiler_codes.py  test_client_factory.py  test_climate.py  test_coordinator.py  test_crypto.py  test_gas_statistics.py  test_imports.py  test_send_stanza.py  test_sensor.py  test_switch.py  test_transport_config.py
