[project]
name = "homeassistant-nefit-easy"
version = "0.1.0"
description = "Native Home Assistant custom integration for Nefit/Bosch Easy thermostats"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "ASYNC", "RUF"]
ignore = ["S101"]  # assert is fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-q"
